clusters/default/admin/deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: schniebel/admin:e20a9b53546846a5d323c5ea881b639f2f83cdcb
        ports:
        - containerPort: 80
