clusters/default/admin/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: admin
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
