clusters/default/admin/ingressroute-admin.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin-ingressroute
  namespace: admin
spec:
  routes:
  - kind: Rule
    match: Host(`admin.ryanschnabel.com`)
    services:
    - kind: Service
      name: admin
      port: 80
    middlewares:
      - name: traefik-forward-auth
